--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "nuxt": "^3.7.3"
+  },
+  "dependencies": {
+    "@nuxt/ui": "^2.8.1",
+    "@nuxtjs/supabase": "^1.1.0"
   }
 }
