--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "nuxt": "^3.7.3"
+    "@nuxtjs/supabase": "^1.1.3",
+    "nuxt": "^3.8.0",
+    "nuxt-headlessui": "^1.1.4"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.0.18",
     "@nuxt/ui": "^2.8.1",
-    "@nuxtjs/supabase": "^1.1.0"
+    "@pinia/nuxt": "^0.5.1",
+    "pinia": "^2.1.7"
   }
 }
